--- a/sonicstadium/com/index.html
+++ b/sonicstadium/com/index.html
@@ -1,40 +1,37 @@
+
+
 <html>
 <head>
-        <title></title>
-        <meta name="keywords" content="Sonic Stadium">
-        <meta name="description" content="The Best Place for all your Sonic needs! News, Downloads, Games, Cheats, Art, you name it, the Stadium has it!">
-
-	<SCRIPT LANGUAGE="JavaScript">
-	function checkParent() {
-	 if (parent != self)
-	  top.location.href = self.location.href
-	}
-	</SCRIPT>
-
+<title>The Sonic Stadium - Welcome</title>
+<meta name="keywords" content="Sonic Stadium">
+<meta name="description" content="The Best Place for all your Sonic needs! News, Downloads, Games, Cheats, Art, you name it, the Stadium has it!">
+        
+<SCRIPT LANGUAGE="JavaScript">
+function checkParent() {
+if (parent != self)
+  top.location.href = self.location.href
+}
+</SCRIPT>
 </head>
 
-<frameset
-        rows="*,73" marginwidth="0" marginheight="0"
-        framespacing=0 frameborder=0 border=0
-	onload="javascript:checkParent()">
->
-        <frame
-                marginwidth="0" marginheight="0"
-                src="/sonicstadium/stas/index.html"
-                name=thepage framespacing=0 frameborder=no border=0
-        >
-        <frame
-                marginwidth="0" marginheight="0"
-                src="https://web.archive.org/web/20010201072000/http://rstrip.namezero.com/navbar/strip.jsp?name=sonic-stadium.com&channel=www&viewsize=FULL&product=5"
-                name=pb scrollbars=no scrolling=no
-                framespacing=0 frameborder=yes border=1 NORESIZE
-        >
+<frameset rows="*,73" frameborder="0" border="0" framespacing="0" marginwidth="0" 
+marginheight="0" onload="javascript:checkParent()">
+<noframes>
+<body><center>
+<h1>{The Sonic Stadium - Welcome}</h1>
+{The Best Place for all your Sonic needs! News, Downloads, Games, Cheats, Art, you name it, the Stadium has it!}<p>
+We're sorry but you've reached a Microsoft IIS hosted web site that uses frames.  You will need a
+frames-enabled browser in order to view the site. PBS.
+</center></body>
+</noframes>
+<frame name="thepage" src="/sonicstadium/topcities/index.html" marginwidth="0" marginheight="0"
+frameborder="no" framespacing="0" border="0">
+
+<frame name="pb" src="https://web.archive.org/web/20010708211327/http://rstrip.namezero.com/navbar/strip.jsp?name=sonic-stadium.com&channel=www&viewsize=full_ad&product=5" 
+marginwidth="0" marginheight="0" scrollbars="no" scrolling="no" framespacing="0" frameborder="yes" border="1" NORESIZE>                          
+
 </frameset>
 
-<noframes>
-Were sorry but youve reached a web site that uses frames.  You will need a
-frames-enabled browser in order to view the site.
-</noframes>
-
 </html>
+
 
