--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <body>
 <h1>Tobi's GitHub Page</h1>
 <p>Hello. Here you will find old Sonic fansites as they were 20 years ago:</p>
+<a href=/ratsonic/sonic/index.html>Rat.org Backup</a>
 <a href=/sonichq/index.html>Sonic HQ</a>
-<a href=/sonicstadium/index.html>Sonic Stadium</a> <!--AS OF 19-02-2021, THE SONIC STADIUM FOLDER IS CURRENTLY EMPTY by Tobi
+<a href=/sonicstadium/index.html>Sonic Stadium</a>
 </body>
 </html>
