update menu and world1 page

--- a/srb2stuff/menu.html
+++ b/srb2stuff/menu.html
@@ -1,20 +1,20 @@
 <html>
 <head>
-<title>SRB20YA Downloads - Installers</title>
+<title>Tobi's SRB2 Archive</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="/favicon.ico">
 </head>
 
 <body bgcolor="#000000" link="#3333FF" vlink="#9933CC" alink="#FF3333" text="#FFFFFF">
 <h1 align="center"><b><i>Tobi's SRB2 Archive</i></b></h1>
-<p align="center"><a href="vers.html">Versions</a></p>
-<p align="center"><a href="srcs.html">Source Code</a></p>
-<p align="center"><a href="adds.html">Addons</a></p>
-<p align="center"><a href="oldc.html">OLDC</a></p>
-
-<p align="center"><a href="sdoom.html">Sonic Doom</a></p>
-<p align="center"><a href="dev.html">Development Assets</a></p>
-<p align="center"><a href="misc.html">Miscellaenous</a></p>
-<p align="center"><a href="anime.html">Anime [DANGEROUS, DO NOT VISIT!]</a></p>
+<p align="center"><a href="home.html" target="index">Home</a></p>
+<p align="center"><a href="vers.html" target="index">Versions</a></p>
+<p align="center"><a href="srcs.html" target="index">Source Code</a></p>
+<p align="center"><a href="adds.html" target="index">Addons</a></p>
+<p align="center"><a href="oldc.html" target="index">OLDC</a></p>
+<p align="center"><a href="sdoom.html" target="index">Sonic Doom</a></p>
+<p align="center"><a href="dev.html" target="index">Development Assets</a></p>
+<p align="center"><a href="misc.html" target="index">Miscellaenous</a></p>
+<p align="center"><a href="anime.html" target="index">Anime [DANGEROUS, DO NOT VISIT!]</a></p>
 </body>
 </html>
