For The Future - revision 1

--- a/forthefuture/menu.html
+++ b/forthefuture/menu.html
@@ -1,20 +1,17 @@
 <html>
 <head>
-<title>Tobi's SRB2 Archive</title>
+<title>For The Future</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="/favicon.ico">
 </head>
 
 <body bgcolor="#000000" link="#3333FF" vlink="#9933CC" alink="#FF3333" text="#FFFFFF">
-<h1 align="center"><b><i>Tobi's SRB2 Archive</i></b></h1>
+<h1 align="center"><b><i>For The Future Menu</i></b></h1>
 <p align="center"><a href="home.html" target="index">Home</a></p>
-<p align="center"><a href="vers.html" target="index">Versions</a></p>
-<p align="center"><a href="srcs.html" target="index">Source Code</a></p>
-<p align="center"><a href="adds.html" target="index">Addons</a></p>
-<p align="center"><a href="oldc.html" target="index">OLDC</a></p>
-<p align="center"><a href="sdoom.html" target="index">Sonic Doom</a></p>
-<p align="center"><a href="dev.html" target="index">Development Assets</a></p>
-<p align="center"><a href="misc.html" target="index">Miscellaenous</a></p>
-<p align="center"><a href="anime.html" target="index">Anime [DANGEROUS, DO NOT VISIT!]</a></p>
+<p align="center"><a href="computers.html" target="index">Section 1</a></p>
+<p align="center"><a href="download.html" target="index">Section 2</a></p>
+<p align="center"><a href="anniversaries.html" target="index">Section 3</a></p>
+<p align="center"><a href="addons.html" target="index">Section 4</a></p>
+<p align="center"><a href="history.html" target="index">Section 5</a></p>
 </body>
 </html>
