--- a/forthefuture/index.html
+++ b/forthefuture/index.html
@@ -1,7 +1,14 @@
-<frameset rows='20%,*' border='0' frameborder='0' framespacing='0'>
+<HTML>
+<HEAD>
+<TITLE>Test Page LMAO</TITLE>
+</HEAD>
+
+<frameset rows='40,*' border='0' frameborder='0' framespacing='0'>
 <frame src='title.html' name='title' marginwidth='0' marginheight='0' scrolling='auto' noresize>
 <frameset cols='20%,*' border='0' frameborder='0' framespacing='0'>
 <frame src='menu.html' name='links' marginwidth='0' marginheight='0' scrolling='no' noresize>
-<frame src='home.html' name='main' marginwidth='0' marginheight='0' scrolling='no' noresize>
+<frame src='home.html' name='index' marginwidth='0' marginheight='0' scrolling='no' noresize>
 </frameset>
 </frameset>
+
+</html>
