--- a/forthefuture/title.html
+++ b/forthefuture/title.html
@@ -4,9 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="favicon.ico">
 </head>
-
 <body bgcolor="#000000" link="#3333FF" vlink="#9933CC" alink="#FF3333" text="#FFFFFF">
-<h2 align="center"><i>To be launched June 2023...</i></h2>
-<p align="center">For The Future is a project by KrazeeTobi. There isn't much going on here, but I promise you that by March, there'll be a bit more on this site.</p>
+<h1 align="center"><b><i>For The Future</i></b></h1>
 </body>
 </html>
