--- a/forthefuture/index.html
+++ b/forthefuture/index.html
@@ -1,13 +1,21 @@
 <HTML>
 <HEAD>
-<TITLE>Test Page LMAO</TITLE>
+<TITLE>SRB20YA Home</TITLE>
 </HEAD>
 
-<frameset rows='40,*' border='0' frameborder='0' framespacing='0'>
+<!--<frameset rows='40,*' border='0' frameborder='0' framespacing='0'>
 <frame src='title.html' name='title' marginwidth='0' marginheight='0' scrolling='auto' noresize>
 <frameset cols='20%,*' border='0' frameborder='0' framespacing='0'>
 <frame src='menu.html' name='links' marginwidth='0' marginheight='0' scrolling='no' noresize>
 <frame src='home.html' name='index' marginwidth='0' marginheight='0' scrolling='no' noresize>
+</frameset>
+</frameset> OLD LAYOUT, DON'T USE ANYMORE!!-->
+
+<frameset cols='20%,*' border='1' frameborder='1' framespacing='0'>
+<frame src='menu.html' name='menu' marginwidth='0' marginheight='0' scrolling='false' noresize>
+<frameset rows='*,8%' border='1' frameborder='1' framespacing='0'>
+<frame src='home.html' name='index' marginwidth='0' marginheight='0' scrolling='auto' noresize>
+<frame src='title.html' name='title' marginwidth='0' marginheight='0' scrolling='false' noresize>
 </frameset>
 </frameset>
 
