--- a/forthefuture/title.html
+++ b/forthefuture/title.html
@@ -1,10 +1,11 @@
 <html>
 <head>
-<title>SRB20YA Home</title>
+<title>SRB20YA Viewcount</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="icon" href="favicon.ico">
 </head>
 <body bgcolor="#000000" link="#3333FF" vlink="#9933CC" alink="#FF3333" text="#FFFFFF">
-<h1 align="center"><b><i>For The Future</i></b></h1>
+<h3 align="center"><b><i>Temporary. Please remove when it's time to add the view counter.</i></b></h3>
+<h3 align="center"><b><i>Site by KrazeeTobi. Site version 0.1</i></b></h3>
 </body>
 </html>
