We're workin' on it, boss!

--- a/forthefuture/title.html
+++ b/forthefuture/title.html
@@ -5,7 +5,7 @@
 <link rel="icon" href="favicon.ico">
 </head>
 <body bgcolor="#000000" link="#3333FF" vlink="#9933CC" alink="#FF3333" text="#FFFFFF">
-<h3 align="center"><b><i>Temporary. Please remove when it's time to add the view counter.</i></b></h3>
-<h3 align="center"><b><i>Site by KrazeeTobi. Site version 0.1</i></b></h3>
+<div id="sfchqfdu9x3lpkxkzyeclcks51g3uhjh4ar"></div><p align="center"><script class="center" type="text/javascript" src="https://counter10.stat.ovh/private/counter.js?c=hqfdu9x3lpkxkzyeclcks51g3uhjh4ar&down=async" async></script></p>
+<p align="center"><b><i>Site by KrazeeTobi. Site version 0.1</i></b></p>
 </body>
 </html>
