--- a/japan/sonicteam/calender.html
+++ b/japan/sonicteam/calender.html
@@ -5,7 +5,7 @@
 </HEAD>
 <BODY BGCOLOR="#000000" TEXT="#ffffff" LINK="#0000ff" VLINK="#ff0000">
 <P ALIGN=Center>
-<IMG SRC="http://www.sonicteam.com/popuptitle.gif" WIDTH="232" HEIGHT="100">
+<IMG SRC="popuptitle.gif" WIDTH="232" HEIGHT="100">
 <H6>
   <P ALIGN=Center>
   <U>Important Announcements</U>
@@ -14,8 +14,8 @@
 <B><SMALL><SMALL><SMALL>August
 30th</SMALL></SMALL></SMALL></B><SMALL><SMALL><SMALL>: Sonic Underground
 airs on
-UPN.</SMALL></SMALL></SMALL><IMG SRC="http://www.sonicteam.com/bernie.gif"
-    ALIGN="Right" WIDTH="100" HEIGHT="201"><IMG SRC="http://www.sonicteam.com/daniel.gif"
+UPN.</SMALL></SMALL></SMALL><IMG SRC="bernie.gif"
+    ALIGN="Right" WIDTH="100" HEIGHT="201"><IMG SRC="daniel.gif"
     ALIGN="Left" WIDTH="100" HEIGHT="177">
 <H6 ALIGN=Center>
   <B></B><U>Chat Hours</U>
@@ -27,12 +27,12 @@ from 6-8 P.M.
 Weekdays</SMALL></SMALL></SMALL>-<B><SMALL><SMALL><SMALL>AIM:
 </SMALL></SMALL></SMALL></B><SMALL><SMALL><SMALL>"Knothole" from 8-10 P.M.
 Weekdays</SMALL></SMALL></SMALL>-<B><SMALL><SMALL><SMALL>Beseen:
-</SMALL></SMALL></SMALL></B><SMALL><SMALL><SMALL>"<A HREF="http://venus.beseen.com/chat/rooms/d/441411#Sonic R Studios">Sonic
+</SMALL></SMALL></SMALL></B><SMALL><SMALL><SMALL>"<A HREF="https://web.archive.org/20011101000000/http://venus.beseen.com/chat/rooms/d/441411#Sonic R Studios">Sonic
 R Studios</A>" from 3-6 P.M.
 Weekends</SMALL></SMALL></SMALL>-<B><SMALL><SMALL><SMALL>Java Chat:
-</SMALL></SMALL></SMALL></B><SMALL><SMALL><SMALL>"<A HREF="http://www.homestead.com/soniccards/segachat.html#Sega Chat">Sega
+</SMALL></SMALL></SMALL></B><SMALL><SMALL><SMALL>"<A HREF="https://web.archive.org/20011101000000/http://www.homestead.com/soniccards/segachat.html#Sega Chat">Sega
 Chat</A>" from 6-9 P.M.
-Weekends</SMALL></SMALL></SMALL><IMG SRC="http://www.sonicteam.com/shayne.gif"
+Weekends</SMALL></SMALL></SMALL><IMG SRC="shayne.gif"
     ALIGN="Left" WIDTH="100" HEIGHT="161">
 <H6>
   <P ALIGN=Center>
