--- a/japan/sonicteam/game.html
+++ b/japan/sonicteam/game.html
@@ -59,7 +59,7 @@
 <align="center">　
 <TABLE border=0 cellspacing=0 align="center">
 <TR> 
-<TD bgcolor="#FF3300" align="center"><A href="http://samba.dricas.ne.jp" target="_parent"><IMG src="samba/samba_banner2.gif" border="0"></A></TD>
+<TD bgcolor="#FF3300" align="center"><A href="https://web.archive.org/20011101000000/http://samba.dricas.ne.jp" target="_parent"><IMG src="samba/samba_banner2.gif" border="0"></A></TD>
 </TD>
 <TR> 
 <TD bgcolor="#FF3300" align="center"><FONT color="ffffff"> <B>サンバ DE アミーゴ Ver2000</B></FONT></TD>
