--- a/japan/sonicteam/index.html
+++ b/japan/sonicteam/index.html
@@ -159,17 +159,17 @@ interOM = setInterval('openMassage()',1)
   </TR>
   <TR> 
     <TD ROWSPAN=13> <IMG SRC="n_images/m_left.gif" WIDTH=17 HEIGHT=291></TD>
-    <TD COLSPAN=3> <A HREF="http://www.sonicteam.com/home.html"
+    <TD COLSPAN=3> <A HREF="home.html"
 			   ONMOUSEOVER="changeImages('m_home', 'n_images/m_home-over.gif', 'm_setumei', 'n_images/m_setumei-m_home_over.gif'); return true;"
 			   ONMOUSEOUT="changeImages('m_home', 'n_images/m_home.gif', 'm_setumei', 'n_images/m_setumei.gif'); return true;"> 
       <IMG NAME="m_home" SRC="n_images/m_home.gif" WIDTH=162 HEIGHT=23 BORDER=0 ALT="ホーム"></A></TD>
     <TD ROWSPAN=13> <IMG SRC="n_images/m_middle.gif" WIDTH=8 HEIGHT=291></TD>
-    <TD WIDTH=332 HEIGHT=76 COLSPAN=2 ROWSPAN=4 BGCOLOR=#000000><OBJECT classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=4,0,2,0" width="329" height="75" border="0" hspace="0" vspace="0" name="top_flash" align="middle">
+    <TD WIDTH=332 HEIGHT=76 COLSPAN=2 ROWSPAN=4 BGCOLOR=#000000><OBJECT classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="https://web.archive.org/20011101000000/http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=4,0,2,0" width="329" height="75" border="0" hspace="0" vspace="0" name="top_flash" align="middle">
         <PARAM name=movie value="images/top_f.swf">
         <PARAM name=quality value=low>
         <PARAM name="SCALE" value="noborder">
         <PARAM name="BGCOLOR" value="#000000">
-        <EMBED src="images/top_f.swf" quality=low pluginspage="http://www.macromedia.com/jp/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" width="329" height="75" border="0" hspace="0" vspace="0" scale="noborder" bgcolor="#000000" name="top_flash" align="middle">
+        <EMBED src="images/top_f.swf" quality=low pluginspage="https://web.archive.org/20011101000000/http://www.macromedia.com/jp/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash" type="application/x-shockwave-flash" width="329" height="75" border="0" hspace="0" vspace="0" scale="noborder" bgcolor="#000000" name="top_flash" align="middle">
         </EMBED> 
       </OBJECT></TD>
     <TD ROWSPAN=4> <IMG SRC="n_images/m_right1.gif" WIDTH=21 HEIGHT=76></TD>
@@ -305,7 +305,7 @@ interOM = setInterval('openMassage()',1)
             </td>
           </tr>
         </table><br>
-        <FONT size="2"><font size="1"> <a href="http://www.sonicteam.com/sonicadv2/" target="_top"><IMG src="images/s_sonic2_banner.gif" width="150" height="45" border="0" alt="ソニックアドベンチャー2"></a><FONT color="#FFFFFF"><BR>
+        <FONT size="2"><font size="1"> <a href="sonicadv2" target="_top"><IMG src="images/s_sonic2_banner.gif" width="150" height="45" border="0" alt="ソニックアドベンチャー2"></a><FONT color="#FFFFFF"><BR>
         </FONT></font></FONT>
         <table width="150" border="0" cellspacing="0" cellpadding="0" height="22">
           <tr>
@@ -316,7 +316,7 @@ interOM = setInterval('openMassage()',1)
           </tr>
         </table><BR>
         <FONT size="2"><font size="1"></font><FONT color="#FFFFFF">
-        </FONT></FONT> <FONT size="2"><A href="http://www.sonicteam.com/pso/home.html"><IMG src="images/s_pso_banner.gif" width="150" height="45" border="0" alt="ファンタシースターオンライン"></A><BR>
+        </FONT></FONT> <FONT size="2"><A href="pso/home.html"><IMG src="images/s_pso_banner.gif" width="150" height="45" border="0" alt="ファンタシースターオンライン"></A><BR>
           </FONT>
         <table width="150" border="0" cellspacing="0" cellpadding="0" height="22">
           <tr>
@@ -440,9 +440,9 @@ interOM = setInterval('openMassage()',1)
                       <td> 
                         <table border="0" cellspacing="1" cellpadding="1">
                           <tr> 
-                            <td width="105" height="25"><a href="http://sonic2.dricas.ne.jp/ja/dload/index.html" target="_top"><img src="n_images/sadv2_hlwn.gif" width="150" height="66" border="0"></a></td>
+                            <td width="105" height="25"><a href="https://web.archive.org/20011101000000/http://sonic2.dricas.ne.jp/ja/dload/index.html" target="_top"><img src="n_images/sadv2_hlwn.gif" width="150" height="66" border="0"></a></td>
                             <td height="25"> 
-                              <div align="left"> <a href="http://sonic2.dricas.ne.jp/ja/dload/index.html" target="_top"><font size="2">『ソニックアドベンチャー２バトル』発表記念「ハロウィンテーマファイル」２Ｐ対戦時に、ソニック達がハロウィンの仮装で登場！</font> 
+                              <div align="left"> <a href="https://web.archive.org/20011101000000/http://sonic2.dricas.ne.jp/ja/dload/index.html" target="_top"><font size="2">『ソニックアドベンチャー２バトル』発表記念「ハロウィンテーマファイル」２Ｐ対戦時に、ソニック達がハロウィンの仮装で登場！</font> 
                                 </a></div>
                             </td>
                           </tr>
