--- a/japan/sonicteam/index_e.html
+++ b/japan/sonicteam/index_e.html
@@ -37,7 +37,7 @@ Please choose the title and click the banner. <br><br>
 </td>
 
 <tr>
-<td bgcolor="cc0033"><a href="http://www.sonicteam.com/sonicadv2/index_e.html" onMouseOver="document.images['button5'].src='images_e/sa2_banner_e2.gif'"
+<td bgcolor="cc0033"><a href="sonicadv2/index_e.html" onMouseOver="document.images['button5'].src='images_e/sa2_banner_e2.gif'"
                            onMouseOut="document.images['button5'].src='images_e/sa2_banner_e1.gif'">
 <img name="button5" src="images_e/sa2_banner_e1.gif" alt="SONIC 2"border=0></a><br>
 
@@ -46,7 +46,7 @@ Please choose the title and click the banner. <br><br>
 </td>
 
 <tr>
-<td bgcolor="008800"><a href="http://samba.dricas.ne.jp/2000hp/e_top.html" onMouseOver="document.images['button6'].src='images_e/banner_samba_e2.gif'"
+<td bgcolor="008800"><a href="https://web.archive.org/20011101000000/http://samba.dricas.ne.jp/2000hp/e_top.html" onMouseOver="document.images['button6'].src='images_e/banner_samba_e2.gif'"
                            onMouseOut="document.images['button6'].src='images_e/banner_samba_e.gif'">
 <img name="button6" src="images_e/banner_samba_e.gif" alt="samba 2000 "border=0></a><br>
 <font size=4 color="ffffff"><b>Samba De Amigo 2000 :</b> 
