--- a/japan/sonicteam/pso_xbox.html
+++ b/japan/sonicteam/pso_xbox.html
@@ -28,7 +28,7 @@ MM_reloadPage(true);
           </tr>
           <tr>
             <td valign="top"> 
-              <div align="center"><a href="http://www.sonicteam.com/pso/home.html" target="_blank"><img src="tgs2001fall/psoxbox_btn.gif" width="492" border="0" height="127"></a></div>
+              <div align="center"><a href="pso/home.html" target="_blank"><img src="tgs2001fall/psoxbox_btn.gif" width="492" border="0" height="127"></a></div>
             </td>
           </tr>
           <tr>
@@ -36,7 +36,7 @@ MM_reloadPage(true);
           </tr>
           <tr>
             <td valign="top"> 
-              <div align="center"><a href="http://xbox.jp/" target="_blank"><img src="tgs2001fall/xbox_btn.gif" width="406" height="79" border="0"></a></div>
+              <div align="center"><a href="https://web.archive.org/20011101000000/http://xbox.jp/" target="_blank"><img src="tgs2001fall/xbox_btn.gif" width="406" height="79" border="0"></a></div>
             </td>
           </tr>
           <tr>
