--- a/japan/sonteam/newe.html
+++ b/japan/sonteam/newe.html
@@ -29,7 +29,7 @@ How do you like it?<p>
 
 
 <img src="gif/ssonic.gif"><br>
-<b><a href="http://www.sega.com/nights/">NiGHTS home page at S.O.A.</a>!</b>
+<b><a href="https://web.archive.org/20011101000000/http://www.sega.com/nights/">NiGHTS home page at S.O.A.</a>!</b>
 <p>
 <hr size=2 width=256><br>
 
