--- a/japan/sonteam/team.html
+++ b/japan/sonteam/team.html
@@ -12,12 +12,12 @@
 <IMG SRC="gif/welcome.gif" WIDTH="450" HEIGHT="46">
 <br>
 <font size=2><b>
-みんな元気？<br>
-ソニックチームのページへようこそ！</b></font>
+How is everyone?<br>
+Welcome to the Sonic Team page!</b></font>
 
 
 
-<! --		見出し ここから		-->
+<! --		Headings Start here		-->
 
 
 <table border="0" width="400">
@@ -27,25 +27,25 @@
 <hr>
 
 
-<!--            更新日を記入            -->
+<!--            Fill in the renewal date.            -->
 <font size=4>
 <b>
-２月６日号
+Feb. 6 issue
 </b></font><p>
 
-<a href="br/infofeb6.html"><b>バーニングレンジャーイベント告知！</b></a>
+<a href="br/infofeb6.html"><b>Burning Ranger event announcement!</b></a>
 <hr>
 
 <font size=4>
 <b>
-１月１９日号
+Jan. 19 issue
 </b></font><p>
 
-<a href="br/package.html"><b>バーニングレンジャー最新ニュース！</b></a>
+<a href="br/package.html"><b>Burning Ranger latest news!</b></a>
 <hr>
 <p>
 <font size=4><b>
-１月９日号
+Jan. 9 issue
 </b></font><br>
 <hr>
 </td>
@@ -56,7 +56,7 @@
 <img src="gif/new_mini.gif" height="16" width="64" align="left">
 </td>
 <td>
-<b><a href="br/seiyu.html" target="_parent">バーニングレンジャーの声優さんからのコメント</b></a>
+<b><a href="br/seiyu.html" target="_parent">Comments from the voice actors of Burning Ranger</b></a>
 </td>
 </tr>
 
@@ -65,7 +65,7 @@
 <img src="gif/new_mini.gif" height="16" width="64" align="left">
 </td>
 <td>
-<b><a href="br/round.html" target="_parent">バーニングレンジャーのステージ１・２を紹介！</b></a>
+<b><a href="br/round.html" target="_parent">Burning Ranger stages one and two!</b></a>
 </td>
 </tr>
 
@@ -74,7 +74,7 @@
 <img src="gif/new_mini.gif" height="16" width="64" align="left">
 </td>
 <td>
-<b><a href="br/br_strack.html" target="_parent">バーニングレンジャーの音楽ＣＤ！</b></a>
+<b><a href="br/br_strack.html" target="_parent">Burning Ranger music CD!</b></a>
 </td>
 </tr>
 
@@ -83,7 +83,7 @@
 <img src="gif/new_mini.gif" height="16" width="64" align="left">
 </td>
 <td>
-<b><a href="br/package.html" target="_parent">バーニングレンジャーパッケージデザイン決定！</b></a>
+<b><a href="br/package.html" target="_parent">Burning Ranger package design finalized!</b></a>
 </td>
 </tr>
 
@@ -92,7 +92,7 @@
 <img src="gif/new_mini.gif" height="16" width="64" align="left">
 </td>
 <td>
-<b><a href="br/home.html#sche" target="_parent">バーニングレンジャーインフォメーション！</b></a>
+<b><a href="br/home.html#sche" target="_parent">Burning Ranger Information!</b></a>
 </td>
 </tr>
 
@@ -105,7 +105,7 @@
 
 </table>
 
-<! --		見出し ここまで		-->
+<! --		Headline End of page		-->
 
 <p>
 <table cellpadding=4>
@@ -119,9 +119,9 @@
 <tr><td align="center">
 <a href="new.html" onMouseOver="window.status='Whats New?';return true"><b>What's New?</b></a></td>
 <td align="center">
-<a href="main.html" onMouseOver="window.status='Main Page';return true"><b>メインページへ</b></a></td>
+<a href="main.html" onMouseOver="window.status='Main Page';return true"><b>Go to main page</b></a></td>
 <td align="center">
-<a href="nights/mail/mail.html" onMouseOver="window.status='Send E-Mail';return true"><b>メールをだそうよ</b></a></td></tr>
+<a href="nights/mail/mail.html" onMouseOver="window.status='Send E-Mail';return true"><b>Let's send an e-mail.</b></a></td></tr>
 </table>
 <br>
 <a href="ehome.html" target="team"><IMG BORDER=0 SRC="gif/e.gif" WIDTH="32" HEIGHT="26"></a><br>
@@ -132,17 +132,17 @@
 <br>
 <p>
 </font>
-このページは、ソニックチームが制作しています。<br>
+This page has been created by Sonic Team。<br>
 <font size=+1><b><a href="mailto:sonicteam@sega.co.jp">sonicteam@sega.co.jp</a></b><p>
 </font>
 
 <font size=-1>
--　無断転載を禁じます。でもリンクは歓迎します。　-<br>
-IE4.0やNetscape3.0以降のブラウザーとかでみてください。<br>
+-　All rights reserved. But links are welcome.　-<br>
+Try using IE4.0 or Netscape 3.0 or later.<br>
 </font>
 
 <hr size=4>
-<a href="../sega/home.html"  target="_parent" onMouseOver="window.status='Bye !';return true"><img alt="*" border="0" src="nights/icn/home.gif">セガホームページへ</a>
+<a href="../sega/home.html"  target="_parent" onMouseOver="window.status='Bye !';return true"><img alt="*" border="0" src="nights/icn/home.gif">Go to the SEGA website</a>
 
 <img src="/cgi-bin/nph-count?width=6&show=NO&link=/sonicteam/">
 
