--- a/japan/sonicteam/index2.html
+++ b/japan/sonicteam/index2.html
@@ -4,10 +4,10 @@
   <TITLE>SONICTEAM.COM</TITLE>
 </HEAD>
 <FRAMESET COLS="24%,76%">
-  <FRAME SRC="http://www.sonicteam.com/frame1.html">
+  <FRAME SRC="frame1.html">
   <FRAMESET ROWS="24%,76%">
-    <FRAME SRC="http://www.sonicteam.com/frame2.html">
-    <FRAME SRC="http://www.sonicteam.com/index4.html" NAME="Target Frame">
+    <FRAME SRC="frame2.html">
+    <FRAME SRC="index4.html" NAME="Target Frame">
   </FRAMESET>
 </FRAMESET>
 
