--- a/japan/sonteam/home.html
+++ b/japan/sonteam/home.html
@@ -2,19 +2,19 @@
 <HEAD>
 <TITLE>Sonicteam HP is moved!!</TITLE>
 <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=Shift_JIS">
-<META HTTP-EQUIV="REFRESH" CONTENT="10; URL=http://www.sonicteam.com/">
+<META HTTP-EQUIV="REFRESH" CONTENT="10; URL=../sonicteam">
 </HEAD>
 
 <BODY BGCOLOR="#FFFFFF">
 <DIV ALIGN="CENTER"> <BR>
-  <P><A HREF="http://www.sonicteam.com/"><IMG SRC="sonicteam.gif" WIDTH="283" HEIGHT="104" ALT="Sonicteam" BORDER="0"></A><BR>
+  <P><A HREF="../sonicteam"><IMG SRC="sonicteam.gif" WIDTH="283" HEIGHT="104" ALT="Sonicteam" BORDER="0"></A><BR>
 <br>
-<FONT SIZE="+1">ソニックチームＨＰは新しいＵＲＬに移転しました。</FONT><BR>
+<FONT SIZE="+1">The Sonic Team website has been moved to a new URL.</FONT><BR>
 <br>
-新ＵＲＬ：　<b><a href="http://www.sonicteam.com/"><font size=+1 color="#ff0080">http://www.sonicteam.com/</font></a></b><br>
+新ＵＲＬ：　<b><a href="../sonicteam"><font size=+1 color="#ff0080">http://www.sonicteam.com/</font></a></b><br>
 <br>
 <br>
-10秒待つか、上の文字をクリックするとジャンプします。<br>
+Wait 10 seconds or click on the text above to jump to it.<br>
 <br>
   </DIV><BR><BR>
 </BODY>
