--- a/japan/sonteam/main.html
+++ b/japan/sonteam/main.html
@@ -20,166 +20,166 @@ Main Page
 
 <tr><td bgcolor="#002288" align="center" height="20">
 <font size=2 color="white"><b>
-コラム
+Columns
 </b></font>
 </trd></tr>
 <tr><td width="640" align="center">
-◆「ソニックアドベンチャー・インターナショナル」みんなもう遊んでくれてるかな？<br>
-ＢＢＳも盛り上がってるし、ワールドランキングも熱いね！
+Have you played "Sonic Adventure International" yet?<br>
+The BBS is going strong, the world rankings are hot!
 </td></tr>
 
 <tr><td bgcolor="#002288" align="center" height="20">
 <font size=2 color="white"><b>
-▼　過去のコンテンツ
+▼　Past Content
 </b></font>
 </trd></tr>
 
 <tr><td valign="center" align="center" height="60">
-<font size=3 color="black"><b>新しいコーナーができました！必見！<br><a href="sonicadv/snd/index.html">ソニックアドベンチャーサウンドのページ</b></a></font>
+<font size=3 color="black"><b>We have a new section! Must see!<br><a href="sonicadv/snd/index.html">Sonic Adventure Sound Page</b></a></font>
 </td></tr>
 
 <tr><td valign="center" align="center" height="60">
-<font size=3 color="black"><b>「ソニック アドベンチャー」発売記念イベント<br><a href="info/news1225.html">は、こんな感じだったよ。</b></a></font>
+<font size=3 color="black"><b>"Sonic Adventure" Launch Event<br><a href="info/news1225.html">was like this.</b></a></font>
 </td></tr>
 
 <tr><td valign="center" align="center" height="60">
-<font size=3 color="black"><b>「ソニック アドベンチャー」完成！<br><a href="info/news1218.html">で、ちょっとおしらせ</b></a></font>
+<font size=3 color="black"><b>"Sonic Adventure" is complete!<br><a href="info/news1218.html">And now, a little news.</b></a></font>
 </td></tr>
 
 <tr><td valign="center" align="center" height="60">
-<font size=3 color="black"><b>これ知ってた？<br><a href="info/hekiga/hekiga0.html">渋谷スペイン坂のソニック</b></a></font>
+<font size=3 color="black"><b>Did you know this?<br><a href="info/hekiga/hekiga0.html">Sonic in Shibuya Spainzaka</b></a></font>
 </td></tr>
 
 <tr><td valign="center" align="center" height="60">
-<font size=3 color="black"><b>音楽ＣＤ第二弾！まもなく発売！<br><a href="info/cd_vocalmini.html">ソニックアドベンチャーのヴォーカルミニアルバム<br>
+<font size=3 color="black"><b>Music CD Vol. 2! Coming soon!<br><a href="info/cd_vocalmini.html">Sonic Adventure's Vocal Mini Album<br>
 ["Songs With Attitude"]</b></a></font>
 </td></tr>
 
 <tr><td valign="center" align="center" height="60">
-<font size=3 color="black"><b>「続」緊急告知！<br><a href="info/advnews1106.html">ソニックアドベンチャーＣＦ<br>放映が増えました！</b></a></font>
+<font size=3 color="black"><b>"Urgent" announcement!<br><a href="info/advnews1106.html">Sonic Adventure CF<br>We're getting more airtime!</b></a></font>
 </td></tr>
 
 <tr><td valign="center" align="center" height="60">
-<font size=3 color="black"><b>おまたせ！<br><a href="sonicadv/dload/cfvol1.html">ソニックアドベンチャーＣＦ<br>ダウンロード開始！</b></a></font>
+<font size=3 color="black"><b>Here you go!<br><a href="sonicadv/dload/cfvol1.html">Sonic Adventure CF<br>Start downloading!</b></a></font>
 </td></tr>
 
 <tr><td valign="center" align="center" height="60">
-<font size=3 color="black"><b>歌ってね！<br><a href="sonicadv/dload/advtheme.html">メインテーマの歌詞を公開！<br>
+<font size=3 color="black"><b>Sing it!<br><a href="sonicadv/dload/advtheme.html">Lyrics to the main theme released!<br>
 [SONICTEAM "PowerPlay"]</b></a></font>
 </td></tr>
 
 
 <tr><td valign="center" align="center" height="60">
-<font size=3 color="black"><b>まもなく発売！キミはもう予約した？<br><a href="info/cd_teambest2.html">ソニックチームのベストアルバム<br>
+<font size=3 color="black"><b>It's almost here! Have you pre-ordered yours yet?<br><a href="info/cd_teambest2.html">Sonic Team's Best Album<br>
 [SONICTEAM "PowerPlay"]</b></a></font>
 </td></tr>
 
 <tr><td valign="center" align="center" height="60">
-<font size=3 color="black"><b>最新画像を公開！<br><a href="sonicadv/shot/shot_advss.html">「アドベンチャーフィールド特集(１)」</b></a></font>
+<font size=3 color="black"><b>Latest images released!<br><a href="sonicadv/shot/shot_advss.html">"Adventure Field Feature (1)"</b></a></font>
 </td></tr>
 
 <tr><td valign="center" align="center" height="60">
-<font size=3 color="black"><b>好評につき第二弾！<br><a href="sonicadv/chao/chao1102.html">「チャオの最新画像」</b></a></font>
+<font size=3 color="black"><b>Second one by popular demand!<br><a href="sonicadv/chao/chao1102.html">"Chao's latest images."</b></a></font>
 </td></tr>
 
 <tr><td valign="center" align="center" height="60">
-<font size=3 color="black"><b>恒例！<br><a href="sonicadv/dload/omake1102.html">おまけ壁紙ダウンロード！</b></a></font>
+<font size=3 color="black"><b>Always!<br><a href="sonicadv/dload/omake1102.html">Extra wallpaper download!</b></a></font>
 </td></tr>
 
 <tr><td valign="center" align="center" height="60">
-<font size=3 color="black"><b>ダウンロードして観ちゃおう！<br><a href="sonicadv/dload/mov1009.html">ソニックアドベンチャー最新ムービー</b></a></font>
+<font size=3 color="black"><b>Let's download it and watch it!<br><a href="sonicadv/dload/mov1009.html">Sonic Adventure Latest Movie</b></a></font>
 </td></tr>
 
 <tr><td valign="center" align="center" height="60">
-<font size=3 color="black"><b>ビジュアルメモリー初のＲＰＧ！東京ゲームショウでも公開<br><a href="sonicadv/chao/chao1009.html">”チャオ”ってな～に？</b></a></font>
+<font size=3 color="black"><b>Visual Memory's first RPG to be shown at the Tokyo Game Show!<br><a href="sonicadv/chao/chao1009.html">What's "Chao"?</b></a></font>
 </td></tr>
 
 
 <tr><td align="center" width="640" height="60" valign="center">
-<font size=3 color="black"><b>これが最後！<br><a href="info/buppan1.html">「ソニックアドベンチャー制作発表会」限定グッズ発売！</b></a></font>
+<font size=3 color="black"><b>This is the last one!<br><a href="info/buppan1.html">"Sonic Adventure Production Announcement" Limited Edition Goods on Sale!</b></a></font>
 </td></tr>
 
 <tr><td align="center" width="640" height="60" valign="center">
-<font size=3 color="black"><b>ついに！<br><a href="info/cd_teambest.html">「ソニックチームベストアルバム」発売決定！</b></a></font>
+<font size=3 color="black"><b>At last!<br><a href="info/cd_teambest.html">"Sonic Team Best Album" will be released!</b></a></font>
 </td></tr>
 
 <tr><td align="center" width="640" height="60" valign="center">
-<font size=3 color="black"><a href="sonicadv/shot/stage922.html"><b>最新ゲーム画面を追加！</b></a></font>
+<font size=3 color="black"><a href="sonicadv/shot/stage922.html"><b>Add the latest game screen!</b></a></font>
 </td></tr>
 
 <tr><td align="center" width="640" height="60" valign="center">
-<font size=3 color="black"><a href="info/822osarai.html"><b>発表会のおさらい（Withレア画像）</b></a></font>
+<font size=3 color="black"><a href="info/822osarai.html"><b>Review of the presentation (With rare images)</b></a></font>
 </td></tr>
 
 <tr><td align="center" width="640" height="60" valign="center">
-<b><a href="info/newsonic.html">これが新しいソニックのデザイン！</a></b>
+<b><a href="info/newsonic.html">This is the new Sonic design!</a></b>
 </td></tr>
 
 <tr><td align="center" width="640" height="60" valign="center">
-<b><a href="info/screen822.html">そして画面写真も公開！</a></b>
+<b><a href="info/screen822.html">And screen shots!</a></b>
 </td></tr>
 
 <tr><td align="center" width="640" height="60" valign="center">
-<b><a href="info/presonic.html">新しいソニックのデザインはどうなる？</a></b>
+<b><a href="info/presonic.html">What will be the design of the new Sonic?</a></b>
 </td></tr>
 
 <tr><td align="center" width="640" height="60" valign="center">
-<b><a href="info/jikki.html">ドリームキャストで動いてるぞ！！</a></b>
+<b><a href="info/jikki.html">It's running on a Dreamcast!</a></b>
 </td></tr>
 
 <tr><td align="center" width="640" height="60">
-<b>最終回！<a href="info/nanbei3.html">[連載]ソニックチーム南米に行く（４）</a></b>
+<b>最終回！<a href="info/nanbei3.html">[Serials] Sonic Team Goes to South America (4)</a></b>
 </td></tr>
 
 <tr><td align="center" width="640" height="60" valign="center">
-<b><a href="info/818pc.html">本日の最新画像を一点発表！</a></b>
+<b><a href="info/818pc.html">One of the latest images of the day!</a></b>
 </td></tr>
 
 <tr><td align="center" width="640" height="60">
-<b><a href="info/nanbei2.html">[連載]ソニックチーム南米に行く（３）</a></b>
+<b><a href="info/nanbei2.html">[Serials] Sonic Team Goes to South America (3)</a></b>
 </td></tr>
 
 <tr><td align="center" width="640" height="120" valign="center">
-<b>いろんな事情で行けないあなたに朗報！<p>
-<a href="http://www.sega.co.jp/sonicadv/">[発表会インターネット中継]やります！！</a></b>
+<b>Good news for those of you who can't make it for various reasons!<p>
+<a href="https://web.archive.org/20011101000000/http://www.sega.co.jp/sonicadv/">[We're going to do a live webcast of the presentation!</a></b>
 <p>
-会場の興奮を少しでも味わってね。おうちで盛り上がろう！
+Enjoy a little of the excitement of the event. Let's have a good time at home!
 </td></tr>
 
 <tr><td align="center" width="640" height="60">
-<b><a href="info/houkoku817.html"><b>発表会の準備は順調だよ！</a></b>
+<b><a href="info/houkoku817.html"><b>Preparations for the presentation are going well!</a></b>
 </td></tr>
 
 <tr><td align="center" width="640" height="60">
-<b><a href="info/maintheme.html">メインテーマ曲　発表会バージョン！</a></b>
+<b><a href="info/maintheme.html">Main theme song, recital version!</a></b>
 </td></tr>
 
 <tr><td align="center" width="640" height="60">
-<b><a href="info/nanbei1.html">[連載]ソニックチーム南米に行く（２）</a></b>
-</td></tr>
-
-<tr><td align="center" width="640" height="60">
-<font size=3 color="black">
-<a href="info/advlogo.html"><b>「ＳＯＮＩＣ Ａｄｖｅｎｔｕｒｅ」タイトルロゴ決定！</b></a>
+<b><a href="info/nanbei1.html">[Serials] Sonic Team Goes to South America (2)</a></b>
 </td></tr>
 
 <tr><td align="center" width="640" height="60">
 <font size=3 color="black">
-<a href="info/822cf.html"><b>発表会告知ＣＦいよいよ開始！</b></a>
+<a href="info/advlogo.html"><b>"SONIC Adventure" title logo decided!</b></a>
 </td></tr>
 
 <tr><td align="center" width="640" height="60">
 <font size=3 color="black">
-<a href="info/happyoukai_add0.html"><b>発表会追加情報！</b></a>
+<a href="info/822cf.html"><b>Announcement CF finally started!</b></a>
 </td></tr>
 
 <tr><td align="center" width="640" height="60">
-<a href="info/nanbei0.html"><b>[連載？]ソニックチーム南米に行く</b></a>
+<font size=3 color="black">
+<a href="info/happyoukai_add0.html"><b>Additional information on the presentation!</b></a>
+</td></tr>
+
+<tr><td align="center" width="640" height="60">
+<a href="info/nanbei0.html"><b>[Serialization?] Sonic Team Goes to South America</b></a>
 </td></tr>
 <tr>
 <td align="center" width="640" height="60">
 <font size=3 color="black">
-<a href="info/happyoukai.html"><b>８月２２日「ＳＯＮＩＣ Ａｄｖｅｎｔｕｒｅ 制作発表会」</b></a>
+<a href="info/happyoukai.html"><b>Aug. 22 "SONIC Adventure Production Presentation"</b></a>
 </font>
 </td>
 </tr>
@@ -187,7 +187,7 @@ Main Page
 <tr>
 <td align="center" width="640" height="60">
 <font size=3 color="black">
-<a href="info/train.html"><b>今日から！「ソニックが山手線をジャック！」</b></a>
+<a href="info/train.html"><b>Starting today! "Sonic will hijack the Yamanote Line!</b></a>
 </font>
 </td>
 </tr>
@@ -195,7 +195,7 @@ Main Page
 <tr>
 <td align="center" width="640" height="60">
 <font size=3 color="black">
-<a href="info/omake0716.html"><b>恒例！「おまけのページ」</b></a>
+<a href="info/omake0716.html"><b>The usual! "Extra pages"</b></a>
 </font>
 </td>
 </tr>
