--- a/japan/sonteam/new.html
+++ b/japan/sonteam/new.html
@@ -20,80 +20,80 @@
 
 </td></tr>
 <tr><td bgcolor="white" align="center" height="40" valign="bottom">
-<b>今週は毎日更新！情報ラッシュだ！</b><br>
+<b>Updates every day this week! Information rush!</b><br>
 </td></tr>
 
 <tr><td bgcolor="white" align="center" height="64">
-<b><a href="info/newsonic.html">これが新しいソニックのデザイン！</a></b>
+<b><a href="info/newsonic.html">This is the new Sonic design!</a></b>
 </td></tr>
 
 <tr><td bgcolor="white" align="center" height="64">
-<b><a href="info/screen822.html">そして画面写真も公開！</a></b>
+<b><a href="info/screen822.html">And screen shots!</a></b>
 </td></tr>
 
 <tr><td align="center" bgcolor="#cccccc">
-先週までのコンテンツ
+Contents up to last week
 </td></tr>
 
 <tr><td bgcolor="white" align="center" height="64">
-<b><a href="info/presonic.html">新しいソニックのデザインはどうなる？</a></b>
+<b><a href="info/presonic.html">What will be the design of the new Sonic?</a></b>
 </td></tr>
 
 <tr><td bgcolor="white" align="center" height="64">
-<b>最終回！<a href="info/nanbei2.html">[連載]ソニックチーム南米に行く（４）</a></b>
+<b>Last episode!<a href="info/nanbei2.html">[Serials] Sonic Team Goes to South America (4)</a></b>
 </td></tr>
 
 <tr><td bgcolor="white" align="center" height="64">
-<b><a href="info/818pc.html">本日の最新画像を一点発表！</a></b>
+<b><a href="info/818pc.html">One of the latest images of the day!</a></b>
 </td></tr>
 
 <tr><td bgcolor="white" align="center" height="64">
-<b><a href="info/nanbei2.html">[連載]ソニックチーム南米に行く（３）</a></b>
+<b><a href="info/nanbei2.html">[Serials] Sonic Team Goes to South America (3)</a></b>
 </td></tr>
 
 <tr><td bgcolor="white" align="center" height="120">
-<b>いろんな事情で行けないあなたに朗報！<p>
-<a href="http://www.sega.co.jp/sonicadv/">[発表会インターネット中継]やります！！</a></b>
+<b>Good news for those of you who can't make it for various reasons!<p>
+<a href="https://web.archive.org/20011101000000/http://www.sega.co.jp/sonicadv/">[Internet broadcast of the presentation] I'm on it!</a></b>
 <p>
-会場の興奮を少しでも味わってね。おうちで盛り上がろう！
+Enjoy a little of the excitement of the event. Let's have a good time at home!
 </td></tr>
 
 <tr><td bgcolor="white" align="center" height="64">
-<a href="info/houkoku817.html"><b>発表会の準備は順調だよ！</a></b>
+<a href="info/houkoku817.html"><b>Preparations for the presentation are going well!</a></b>
 </td></tr>
 
 <tr><td bgcolor="white" align="center" height="64">
-<a href="info/nanbei1.html"><b>[連載]ソニックチーム南米に行く（２）</b></a>
+<a href="info/nanbei1.html"><b>[Serials] Sonic Team Goes to South America (2)</b></a>
 </td></tr>
 
 <tr><td bgcolor="white" align="center" height="64">
-<a href="info/advlogo.html"><b>「ＳＯＮＩＣ Ａｄｖｅｎｔｕｒｅ」タイトルロゴ決定！</b></a>
+<a href="info/advlogo.html"><b>"SONIC Adventure" title logo decided!</b></a>
 </td></tr>
 
 <tr><td bgcolor="white" align="center" height="64">
-<a href="info/822cf.html"><b>発表会告知ＣＦいよいよ開始！</b></a>
+<a href="info/822cf.html"><b>Announcement CF finally started!</b></a>
 </td></tr>
 
 <tr><td bgcolor="white" align="center" height="64">
-<a href="info/happyoukai_add0.html"><b>発表会追加情報！</b></a>
+<a href="info/happyoukai_add0.html"><b>Additional information on the presentation!</b></a>
 </td></tr>
 
 <tr><td bgcolor="white" align="center" height="64">
-<a href="info/nanbei0.html"><b>[連載？]ソニックチーム南米に行く</b></a>
+<a href="info/nanbei0.html"><b>[Serialization?] Sonic Team Goes to South America</b></a>
 </td></tr>
 
 <tr><td bgcolor="white" align="center" height="64">
-<a href="info/happyoukai.html"><b>８月２２日「ＳＯＮＩＣ Ａｄｖｅｎｔｕｒｅ 制作発表会」</b></a>
+<a href="info/happyoukai.html"><b>Aug. 22 "SONIC Adventure Production Presentation"</b></a>
 </td></tr>
 
 <tr><td bgcolor="white" align="center" height="64">
-<a href="info/train.html"><b>７月１６日「ソニックが山手線をジャック！」</b></a>
+<a href="info/train.html"><b>July 16 "Sonic hijacks the Yamanote Line!"</b></a>
 </td></tr>
 
 <tr>
 <td bgcolor="white" align="center" height="64">
 <font size=3 color="black">
-<a href="info/omake0716.html"><b>恒例！「おまけのページ」</b></a>
+<a href="info/omake0716.html"><b>The usual! "Extra pages"</b></a>
 </font>
 </td>
 </tr>
@@ -103,8 +103,8 @@
 
 <tr><td bgcolor="#dddddd" align="center" height="80" valign="bottom">
 
-<b>たくさんくると、うれしいな。<br>
-<a href="nights/mail/mail.html"><b>ソニックチームへメールを出そう！</b></a>！
+<b>I'll be happy if many come.<br>
+<a href="nights/mail/mail.html"><b>Let's send an email to Sonic Team!</b></a>！
 <p>
 </td></tr>
 <tr><td bgcolor="#dddddd" align="center" valign="bottom" height="100">
@@ -113,7 +113,7 @@
 (C) SEGA ENTERPRISES, LTD. 1996<br>
 </font>
 <p>
-このページは、ソニックチームが制作しています。
+This page is produced by Sonic Team.
 <!--
 Editor：K.Hoshino/Art Director
 -->
@@ -121,7 +121,7 @@ Editor：K.Hoshino/Art Director
 <tr><td bgcolor="black" align="center">
 <hr>
 <font size=2>
-<a href="home.html"><img alt="*" border="0" src="gif/anm/sonianm.gif"><br>戻る</a>
+<a href="home.html"><img alt="*" border="0" src="gif/anm/sonianm.gif"><br>Return</a>
 </font>
 <p>
 <img src="/cgi-bin/nph-count?width=6&show=NO&link=/sonicteam/new.html">
