--- a/japan/sonicteam/flame_menu.html
+++ b/japan/sonicteam/flame_menu.html
@@ -82,7 +82,7 @@ function MM_swapImage() { //v3.0
           <td> <a href="index.html" target="_top"
 			   onMouseOver="changeImages('s_home', 'n_images/s_home-over.gif'); return true;"
 			   onMouseOut="changeImages('s_home', 'n_images/s_home.gif'); return true;"> 
-            <img name="s_home" src="n_images/s_home.gif" width=100 height=20 border=0 alt="ƒz[ƒ€"></a></td>
+            <img name="s_home" src="n_images/s_home.gif" width=100 height=20 border=0 alt="Home"></a></td>
           <td bgcolor=#FFFFFF> <img src="n_images/spacer.gif" width=4 height=20></td>
           <td> <a href="new/home.html" target="b"
 			   onMouseOver="changeImages('s_new', 'n_images/s_new-over.gif'); return true;"
