Change global links in sonicteam folders 1

--- a/japan/sonicteam/10th_info/event.html
+++ b/japan/sonicteam/10th_info/event.html
@@ -87,11 +87,11 @@ a:active{text-decoration:none;}
 <table border="0" width="550" bgcolor="ff4433" cellpadding=7>
 <tr><td><font size=3 color="white"><center>
 このイベントの模様は
-<a href="http://www.sega.co.jp/sonic_taiken/">
+<a href="https://web.archive.org/20011101000000/http://www.sega.co.jp/sonic_taiken/">
 こちら</a>で随時掲載!  全国５都市を縦断するイベントの様子を各地点からレポートするよ！
 </font>
 <br>
-<a href="http://www.sega.co.jp/sonic_taiken/"><IMG src="../images/report.gif"></a></center>
+<a href="https://web.archive.org/20011101000000/http://www.sega.co.jp/sonic_taiken/"><IMG src="../images/report.gif"></a></center>
 </tr></td>
 </tr></td>
 </table>
