--- a/japan/sonicteam/10th_info/home.html
+++ b/japan/sonicteam/10th_info/home.html
@@ -202,8 +202,8 @@ ABOUT SONIC
 
 <table width="400" border=0>
 <tr>
-<td align="center"><A href="http://www.sonicteam.com/index.html"><font size="2">トップページへ戻る／</font></a></td>
-<td align="center"><A href="http://www.sonicteam.com/sonicadv2/index.html"><font size="2">「ソニックアドベンチャー２」オフィシャルＨＰへ／</font></a></td>
+<td align="center"><A href="/japan/sonicteam/index.html"><font size="2">トップページへ戻る／</font></a></td>
+<td align="center"><A href="/japan/sonicteam/sonicadv2/index.html"><font size="2">「ソニックアドベンチャー２」オフィシャルＨＰへ／</font></a></td>
 </tr>
 
 </table>
