--- a/japan/sonteam/723/tshats.html
+++ b/japan/sonteam/723/tshats.html
@@ -67,7 +67,7 @@
 　　■開催場所： 東京ビッグサイト　東６ホール<br>
 　　～各プレイガイド・キャラクターショップにて前売り入場券発売中～ 
 <br><br>
-　　<a href="http://www.sega.co.jp/goods/char99.html">詳しくはこちら</a>　　　　　
+　　<a href="https://web.archive.org/20011101000000/http://www.sega.co.jp/goods/char99.html">詳しくはこちら</a>　　　　　
 
 </td>
 </table>
