sonichq/angelfire fixes

--- a/sonichq/angelfire/desktop.html
+++ b/sonichq/angelfire/desktop.html
@@ -6,22 +6,22 @@
 <body bgcolor="000000" background="" text="02FD0F" link="#0000ff" vlink="#ff0000">
 <center>
 <font size=+2>Sonic Desktop</font>
-<p><img src="/ok/warpsonic/images/bar1.gif">
+<p><img src="images/bar1.gif">
 <p>In here, you'll find Sonic desktop themes, wallpaper, and other things that make your computer desktop look way Sonic! All things here are from SEGA.
-<p><img src="/ok/warpsonic/images/bar1.gif"> 
-<p><a href="/ok/warpsonic/images/sontheme.zip"><img src="/ok/warpsonic/images/sonicthm.gif"></a><br>
+<p><img src="images/bar1.gif"> 
+<p><a href="images/sontheme.zip"><img src="images/sonicthm.gif"></a><br>
 This is the Sonic the Hedgehog desktop theme. It contains things such as wallpaper, icons, sounds, and more! This desktop theme is 552KB in size.
-<p><a href="/ok/warpsonic/images/sonic3d.zip"><img src="/ok/warpsonic/images/sonic3d.gif"></a><br>
+<p><a href="images/sonic3d.zip"><img src="images/sonic3d.gif"></a><br>
 <font color="#0000ff">This is a really cool wallpaper from Sonic 3D Blast. It fits perfect with a jungle theme. This file is 187KB in size.</font>
-<p><a href="/ok/warpsonic/images/sonicp.zip"><img src="/ok/warpsonic/images/sonicp.gif"></a><br>
+<p><a href="images/sonicp.zip"><img src="images/sonicp.gif"></a><br>
 Another cool wallpaper, this time Sonic is embossed into it! This wallpaper is about 44KB in size.
-<p><a href="/ok/warpsonic/images/sonknukw.zip"><img src="/ok/warpsonic/images/sonknukw.gif"></a><br>
+<p><a href="images/sonknukw.zip"><img src="images/sonknukw.gif"></a><br>
 <font color="#0000ff">If you like Sonic and Knuckles, you gotta get this one! This file is only 15KB in size!</font>
-<p><a href="/ok/warpsonic/images/sonlogo.zip"><img src="/ok/warpsonic/images/sonlogo.gif"></a><br>
+<p><a href="images/sonlogo.zip"><img src="images/sonlogo.gif"></a><br>
 This is the Sonic Windows start up logo, so if you don't want the clouds...choose this one! This file is about 60KB in size.
-<p><a href="/ok/warpsonic/images/sonico.zip"><img src="/ok/warpsonic/images/SegaSonic.gif"></a><br> 
+<p><a href="images/sonico.zip"><img src="images/SegaSonic.gif"></a><br> 
 <font color="#0000ff">This is the Sonic icon collection. You'll find all the icons from the games in here. The size of this package is 96KB.
-<p><img src="/ok/warpsonic/images/bar1.gif">
+<p><img src="images/bar1.gif">
 <p>Email <A HREF="mailto:sonichq@yahoo.com">Sonic HQ</a>
 
 </font>
