--- a/sonichq/angelfire/index.html
+++ b/sonichq/angelfire/index.html
@@ -3,7 +3,7 @@
 <title>Zifei's Sonic Page</title>
 </header>
 
-<BODY bgcolor="#00005a" background="/ok/warpsonic/images/soniclite.gif"
+<BODY bgcolor="#00005a" background="images/soniclite.gif"
  text="#000000" link="#405961" vlink="#ff0000">
 <center><p><b><font size=+3>Zifei's Sonic Page</p></B></font>
 <font size=+4> Go<A HREF="/sonichq/geocities/EnchantedForest/Dell/7834/home.html"> here</a>.
