--- a/sonichq/angelfire/menu.html
+++ b/sonichq/angelfire/menu.html
@@ -62,14 +62,14 @@ function bounce ( message, offset, step ) {
 <SCRIPT LANGUAGE = "JavaScript1.1">
 <!--
   conBrowser=1;
-  switch1on  = new Image(36,36);  switch1on.src  = '/ok/warpsonic/images/desktop2.gif';
-  switch1off = new Image(36,36);  switch1off.src = '/ok/warpsonic/images/desktop.gif';
-  switch2on  = new Image(36,36);  switch2on.src  = '/ok/warpsonic/images/animgif2.gif';
-  switch2off = new Image(36,36);  switch2off.src = '/ok/warpsonic/images/animgif.gif';
-  switch3on  = new Image(36,36);  switch3on.src  = '/ok/warpsonic/images/games2.gif';
-  switch3off = new Image(36,36);  switch3off.src = '/ok/warpsonic/images/games.gif';
-  switch4on  = new Image(36,36);  switch4on.src  = '/ok/warpsonic/images/pictures2.gif';
-  switch4off = new Image(36,36);  switch4off.src = '/ok/warpsonic/images/pictures.gif';
+  switch1on  = new Image(36,36);  switch1on.src  = 'images/desktop2.gif';
+  switch1off = new Image(36,36);  switch1off.src = 'images/desktop.gif';
+  switch2on  = new Image(36,36);  switch2on.src  = 'images/animgif2.gif';
+  switch2off = new Image(36,36);  switch2off.src = 'images/animgif.gif';
+  switch3on  = new Image(36,36);  switch3on.src  = 'images/games2.gif';
+  switch3off = new Image(36,36);  switch3off.src = 'images/games.gif';
+  switch4on  = new Image(36,36);  switch4on.src  = 'images/pictures2.gif';
+  switch4off = new Image(36,36);  switch4off.src = 'images/pictures.gif';
 
 //-->
 </SCRIPT>
