--- a/sonichq/angelfire/animated.html
+++ b/sonichq/angelfire/animated.html
@@ -6,13 +6,13 @@
 <body bgcolor="000000" background="" text="02FD0F" link="#0000ff" vlink="#ff0000">
 <center>
 <font size=+2>Animated GIFs</font>
-<p><img src="/ok/warpsonic/images/bar1.gif">
+<p><img src="images/bar1.gif">
 <p>In here, you'll find Sonic animated GIFs, and oh yes, you'll find a lot of them! All of them are properties of SEGA.
-<p><img src="/ok/warpsonic/images/bar1.gif"> 
-<p><img src="/ok/warpsonic/images/aniknux.gif"><img src="/ok/warpsonic/images/anisonic.gif"><img src="/ok/warpsonic/images/anitails.gif"><img src="/ok/warpsonic/images/pasonic.gif"><img src="/ok/warpsonic/images/patails.gif"><img src="/ok/warpsonic/images/sonicwaiting.gif"><br>
-<img src="/ok/warpsonic/images/srun.gif"><img src="/ok/warpsonic/images/sonianm.gif"><img src="/ok/warpsonic/images/sonicwins.gif"><img src="/ok/warpsonic/images/ring.gif"><img src="/ok/warpsonic/images/swalk.gif"><br> 
-<img src="/ok/warpsonic/images/S1.gif">
-<p><img src="/ok/warpsonic/images/bar1.gif">
+<p><img src="images/bar1.gif"> 
+<p><img src="images/aniknux.gif"><img src="images/anisonic.gif"><img src="images/anitails.gif"><img src="images/pasonic.gif"><img src="images/patails.gif"><img src="images/sonicwaiting.gif"><br>
+<img src="images/srun.gif"><img src="images/sonianm.gif"><img src="images/sonicwins.gif"><img src="images/ring.gif"><img src="images/swalk.gif"><br> 
+<img src="images/S1.gif">
+<p><img src="images/bar1.gif">
 <p>Email <A HREF="mailto:sonichq@yahoo.com">Sonic HQ</a>
 
 </font>
