--- a/sonichq/angelfire/games.html
+++ b/sonichq/angelfire/games.html
@@ -8,7 +8,7 @@
 <font size=+2>Game Demos</font>
 <p><img src="images/bar1.gif">
 <p>In here, you'll find Sonic game demos. All of them are linked to SEGA and are their properties.
-<p><img src="/ok/warpsonic/images/bar1.gif"> 
+<p><img src="images/bar1.gif"> 
 <p><a href="https://web.archive.org/20011101000000/http://www.sega.com/multimedia/game_demos/exe/sk_demo.exe"><img src="images/pcsonickbox.jpg"></a><br>
 This is the Sonic and Knuckles Collection, it includes Sonic and Knuckles, Sonic 3, and Sonic 3 and Knuckles. You'll need to have <a href="https://web.archive.org/20011101000000/http://microsoft.com/directx/default.asp">DirectX 5</a> to play. File size about 5MB. 
 <p><a href="https://web.archive.org/20011101000000/http://www.sega.com/multimedia/game_demos/exe/s3d_demo.exe"><img src="images/pcson3dblstbox.jpg"></a><br>
